--- a/vue-frontstage/src/components/login/login.html
+++ b/vue-frontstage/src/components/login/login.html
@@ -26,7 +26,7 @@
         <el-col :span="24">
           <el-form-item prop="phone">
             <el-input v-model="parameter.phone" placeholder="请输入手机号">
-              <el-button slot="append" v-text="msg" @click="getCode" :disabled="disabled"></el-button>
+              <el-button slot="append" v-text="msg" @click="getCode(parameter.phone,'rules')" :disabled="disabled"></el-button>
             </el-input>
           </el-form-item>
         </el-col>
