!41 完成 - 前端 - 新增 - 后台Vue - 访问首页（home.vue）获得员工信息 - 张方松 - #I3W9MM * Merge branch '#I3W9MM' of https://gitee.com/hemiao3000/woniu-16-4-grou… * 前端 - 后台Vue - 访问首页（home.vue）获得员工信息 - 张方松 * - 新增了一些功能 * - 解决了 Gateway 不允许自定义请求头 * 前端 - 后台Vue - 访问首页（home.vue）获得员工信息 - 张方松 * - 增加了功能 * - 新增了一些功能 * - 解决了 Gateway 不允许自定义请求头

--- a/vue-backstage/src/components/login/Login.html
+++ b/vue-backstage/src/components/login/Login.html
@@ -71,7 +71,8 @@
 
               <!--              验证模块-->
               <el-form-item style="width: 100%" prop="flagLoginVerify">
-                <vue-simple-verify ref="verify1" width="330" tips="滑动模块进行人机验证" @success="userLogin.flagLoginVerify = true" />
+                <vue-simple-verify ref="verify1" width="330" tips="滑动模块进行人机验证"
+                                   @success="userLogin.flagLoginVerify = true"/>
               </el-form-item>
 
               <!--              按钮组-->
@@ -206,7 +207,8 @@
               </el-form-item>
               <!--              验证模块-->
               <el-form-item style="width: 100%" prop="flagLoginVerify">
-                <vue-simple-verify ref="verify2" width="330" tips="滑动模块进行人机验证" @success="pwdUpdate.flagLoginVerify = true" />
+                <vue-simple-verify ref="verify2" width="330" tips="滑动模块进行人机验证"
+                                   @success="pwdUpdate.flagLoginVerify = true"/>
               </el-form-item>
 
               <br/>
