!51 完成 前端 - 前台Vue（vue-frontstage)项目 - 添加->register路由的 - 医生排班的回显 & 后台 - 挂号微服务 （register-service）& 新增 - 添加=>挂号记录 - 刘小雨 * 完成 - 前端 - 前台Vue（vue-frontstage)项目 - 添加->register路由的 - 医生排班的回显 * 新增了：根据id改挂号表的状态 - 刘小雨

--- a/vue-frontstage/src/components/register/register.css
+++ b/vue-frontstage/src/components/register/register.css
@@ -1,9 +1,21 @@
-.main-right {
+.main-right{
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  background-color: blanchedalmond;
+}
+.main-right1{
+  padding: 10px;
+  margin: 10px;
+  background-color: azure;
+}
+
+.main-right2-1 {
   width: 100%;
   background-color: gainsboro;
 }
 
-.main-right2 {
+.main-right2-2 {
   width: 100%;
   background-color: white;
 }
