--- a/vue-frontstage/src/components/index/index.css
+++ b/vue-frontstage/src/components/index/index.css
@@ -1,14 +1,16 @@
-.index{
+.index {
   width: 100%;
   height: 100%;
 }
-.Header{
+
+.Header {
   background-color: white;
   line-height: 60px;
   height: 100%;
   text-align: right;
 }
-.Main{
+
+.main {
   /*background-color: black;*/
   height: 100%;
 }
