--- a/vue-backstage/src/components/home/home.html
+++ b/vue-backstage/src/components/home/home.html
@@ -50,7 +50,7 @@
 
       <!-- 中右 -->
       <el-main class="main-right">
-        <router-view/>
+        <router-view :departmentId="loginUserInfo.departmentId"></router-view>
       </el-main>
 
     </el-container>
