!57  后台 - 挂号微服务 （register-service）& 新增 - 添加=>挂号记录 - 刘小雨 * 重新添加了sql脚本，编写client * 删除了sql脚本 * 添加了6.22的站会记录 * 修改了6.21站会的文件的命名 * 编写了根据手机号查询挂号订单 * 编写好了根据手机号查询no的接口 * 修改了名字 * 暂存，回去休息了

--- a/vue-frontstage/src/components/register/register.html
+++ b/vue-frontstage/src/components/register/register.html
@@ -47,7 +47,7 @@
 
                       <el-col :span="6">
                         <el-tag v-if="item.shifttype==1">上午班</el-tag>
-                        <el-tag v-if="item.shifttype==2">下午班</el-tag>
+                        <el-tag v-else-if="item.shifttype==2">下午班</el-tag>
                         <el-tag v-else>晚班</el-tag>
                       </el-col>
 
