--- a/vue-frontstage/src/components/registerRecord/registerRecord.html
+++ b/vue-frontstage/src/components/registerRecord/registerRecord.html
@@ -1,111 +1,66 @@
 <div>
 
   <div>
-    <el-row>
+    <el-row v-for="item in registerOrder" key="item.id">
       <el-col :span="8">
-        <p>订单号: xxxxx</p>
+        <p>订单号: {{ item.no }}</p>
         <br/>
-        <span>挂号时间:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科目:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科室:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>医生:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>挂号时间:</span><span>{{ item.regTime }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>科目:</span><span>{{ item.departmentName }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>医生:</span><span>{{ item.doctorName }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
       </el-col>
       <el-col :span="2" :push="14">
-        <div>
-          <span>状态：</span><span style="color:red;">已完成</span>
+        <div v-if="item.status=='0'">
+          <span>状态：</span><span style="color:red;">未付款</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='1'">
+          <span>状态：</span><span style="color:red;">以退款</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='2'">
+          <span>状态：</span><span style="color:red;">付款失败</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='3'">
+          <span>状态：</span><span style="color:red;">已付款</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='4'">
+          <span>状态：</span><span style="color:red;">已取初诊票</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='5'">
+          <span>状态：</span><span style="color:red;">初诊失约</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='6'">
+          <span>状态：</span><span style="color:red;">待复诊</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='7'">
+          <span>状态：</span><span style="color:red;">已取复诊票</span>
+          <br/><br/>
+          <el-button type="primary" @click="showDetails()">查看</el-button>
+        </div>
+        <div v-else-if="item.status=='8'">
+          <span>状态：</span><span style="color:red;">复诊失约</span>
           <br/><br/>
           <el-button type="primary" @click="showDetails()">查看</el-button>
         </div>
       </el-col>
+      <hr/>
     </el-row>
-    <hr/>
   </div>
 
-  <div>
-    <el-row>
-      <el-col :span="8">
-        <p>订单号: xxxxx</p>
-        <br/>
-        <span>挂号时间:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科目:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科室:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>医生:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-      </el-col>
-      <el-col :span="2" :push="14">
-        <div>
-          <span>状态：</span><span style="color:red;">未付款</span>
-          <br/><br/>
-          <el-button type="primary">查看</el-button>
-        </div>
-      </el-col>
-    </el-row>
-    <hr/>
-  </div>
-
-  <div>
-    <el-row>
-      <el-col :span="8">
-        <p>订单号: xxxxx</p>
-        <br/>
-        <span>挂号时间:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科目:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科室:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>医生:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-      </el-col>
-      <el-col :span="2" :push="14">
-        <div>
-          <span>状态：</span><span style="color:red;">带取票</span>
-          <br/><br/>
-          <el-button type="primary">查看</el-button>
-        </div>
-      </el-col>
-    </el-row>
-    <hr/>
-  </div>
-
-  <div>
-    <el-row>
-      <el-col :span="8">
-        <p>订单号: xxxxx</p>
-        <br/>
-        <span>挂号时间:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科目:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科室:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>医生:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-      </el-col>
-      <el-col :span="2" :push="14">
-        <div>
-          <span>状态：</span><span style="color:red;">已完成</span>
-          <br/><br/>
-          <el-button type="primary">查看</el-button>
-        </div>
-      </el-col>
-    </el-row>
-    <hr/>
-  </div>
-
-  <div>
-    <el-row>
-      <el-col :span="8">
-        <p>订单号: xxxxx</p>
-        <br/>
-        <span>挂号时间:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科目:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>科室:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>医生:</span><span>xxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
-      </el-col>
-      <el-col :span="2" :push="14">
-        <div>
-          <span>状态：</span><span style="color:red;">已完成</span>
-          <br/><br/>
-          <el-button type="primary">查看</el-button>
-        </div>
-      </el-col>
-    </el-row>
-    <hr/>
-  </div>
-
-  <el-dialog title="挂号详情" :visible.sync="detailsBox" center width="30%" >
+  <el-dialog title="挂号详情" :visible.sync="detailsBox" center width="30%">
     <hr/>
     <p>订单号:<span>....</span></p>
     <hr/>
