--- a/vue-frontstage/src/components/registerRecord/registerRecord.html
+++ b/vue-frontstage/src/components/registerRecord/registerRecord.html
@@ -1,81 +1,99 @@
 <div>
 
-  <div>
-    <el-row v-for="item in registerOrder" key="item.id">
-      <el-col :span="8">
+  <div v-for="item in registerOrder" key="item.id">
+    <el-row>
+      <el-col :span="16">
         <p>订单号: {{ item.no }}</p>
         <br/>
-        <span>挂号时间:</span><span>{{ item.regTime }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>挂号时间:</span><span>{{ item.regTime | dateConverter('yyyy-MM-dd hh:mm:ss') }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
         <span>科目:</span><span>{{ item.departmentName }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
         <span>医生:</span><span>{{ item.doctorName }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
       </el-col>
-      <el-col :span="2" :push="14">
+      <el-col :span="2" :push="6">
         <div v-if="item.status=='0'">
           <span>状态：</span><span style="color:red;">未付款</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='1'">
           <span>状态：</span><span style="color:red;">以退款</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='2'">
           <span>状态：</span><span style="color:red;">付款失败</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='3'">
           <span>状态：</span><span style="color:red;">已付款</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='4'">
           <span>状态：</span><span style="color:red;">已取初诊票</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='5'">
           <span>状态：</span><span style="color:red;">初诊失约</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='6'">
           <span>状态：</span><span style="color:red;">待复诊</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='7'">
           <span>状态：</span><span style="color:red;">已取复诊票</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
         <div v-else-if="item.status=='8'">
           <span>状态：</span><span style="color:red;">复诊失约</span>
           <br/><br/>
-          <el-button type="primary" @click="showDetails()">查看</el-button>
+          <el-button type="primary" @click="showDetails(item)">查看</el-button>
         </div>
       </el-col>
-      <hr/>
     </el-row>
+    <hr/>
   </div>
 
   <el-dialog title="挂号详情" :visible.sync="detailsBox" center width="30%">
-    <hr/>
-    <p>订单号:<span>....</span></p>
-    <hr/>
-    <p>挂号时间:<span>....</span></p>
-    <hr/>
-    <p>科目:<span>....</span></p>
-    <hr/>
-    <p>科室:<span>....</span></p>
-    <hr/>
-    <p>医生:<span>....</span></p>
-    <hr/>
-    <p>检查信息:<span>....</span></p>
-    <p>药物信息:<span>....</span></p>
-    <div style="text-align: right">
+    <el-card class="box-card">
+      <div><span class="thick">订单号：</span>{{ registerOrderItem.no }}</div>
+      <br/>
+      <div><span class="thick">患者：</span>{{ registerOrderItem.name }}</div>
+      <br/>
+      <div><span class="thick">挂号时间：</span>{{ registerOrderItem.regTime | dateConverter('yyyy-MM-dd hh:mm:ss') }}</div>
+      <br/>
+      <div><span class="thick">科目：</span>{{ registerOrderItem.departmentName }}</div>
+      <br/>
+      <div><span class="thick">医生：</span>{{ registerOrderItem.doctorName }}</div>
+      <br/>
+      <div><span class="thick">挂号类型：</span>{{ registerOrderItem.type == '1' ? "线上" : "线下" }}</div>
+      <br/>
+      <div><span
+        class="thick">挂号价格：</span>{{ registerOrderItem.price === undefined ? "" : registerOrderItem.price.toFixed(2) }}元
+      </div>
+    </el-card>
+    <br/>
+    <br/>
+    <div style="float: right" v-if="registerOrderItem.status=='3'">
       <el-button type="primary">退款</el-button>
     </div>
+    <div v-else-if="registerOrderItem.status=='0'">
+      <div style="float: left" v-if="new Date(leftTimeData)<new Date()">
+        <span >剩余时间:</span><span style="color: red" >
+        {{ new Date(leftTimeData) | timeConverter }}
+      </span>
+      </div>
+      <div style="float: right">
+        <el-button type="primary">取消挂号订单</el-button>
+      </div>
+    </div>
+    <br/>
+    <br/>
   </el-dialog>
 </div>
