--- a/vue-frontstage/src/components/registerRecord/registerRecord.html
+++ b/vue-frontstage/src/components/registerRecord/registerRecord.html
@@ -1,6 +1,6 @@
 <div>
 
-  <div v-for="item in registerOrder" key="item.id">
+  <div v-for="item in registerOrder" :key="item.id">
     <el-row>
       <el-col :span="16">
         <p>订单号: {{ item.no }}</p>
