--- a/vue-backstage/src/components/home/home.html
+++ b/vue-backstage/src/components/home/home.html
@@ -31,6 +31,10 @@
             <i class="glyphicon glyphicon-home"></i>
             <span slot="title">排班系统</span>
           </el-menu-item>
+          <el-menu-item index="/register/system">
+            <i class="glyphicon glyphicon-home"></i>
+            <span slot="title">挂号系统</span>
+          </el-menu-item>
 
           <el-submenu :index="item.id + ''" v-for="item in menu" :key="item.id">
             <template slot="title">
