!99 整合医生微服务接口测试数据 * 修改了医生接口的测试数据

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/src/main/resources/templates/callProofOk.html
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/src/main/resources/templates/callProofOk.html
@@ -8,7 +8,7 @@
 <script>
     window.onload=function(){
         //alert("页面加载完成！");
-        location.href="http://localhost:8080";
+        location.href="http://localhost:8080/#/login";
     }
 </script>
 
